Remove opacity animation to prevent image flickering on webkit browsers.

--- a/sources/stylesheets/content/_blog-article.scss
+++ b/sources/stylesheets/content/_blog-article.scss
@@ -25,7 +25,6 @@
     padding-top: 15px;
     padding-bottom: 15px;
     opacity: 1;
-    transition: opacity 1s;
 
     &:hover {
       // scss-lint:disable NestingDepth
