--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1177,7 +1177,6 @@ a {
   padding-top: 15px;
   padding-bottom: 15px;
   opacity: 1;
-  transition: opacity 1s;
 }
 .publicmode .blog-listing-page .blog-article:hover, .blog-listing-page .blog-article:hover.add-button {
   opacity: .8;
